# noga-nace-mapping

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: noga_nace_mapping.csv  noga_nace_mapping.json  noga_nace_mapping.ttl
data/sources/: manifest.json
scripts/: build_mapping.py  fetch_official_labels.py
src/noga_nace_mapping/: __init__.py  builder.py  cli.py  export.py  export_cli.py  locales.py  mapping.py  nace_label_catalog.py  noga_label_catalog.py  noga_verticals.py  official_ids.py  official_labels.py
src/noga_nace_mapping/data/: noga_labels.json  noga_nace_mapping.csv
tests/: test_export.py  test_mapping.py
